--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.15",
         "friendsofsymfony/rest-bundle": "^3.5",
+        "gedmo/doctrine-extensions": "^3.12",
         "jms/serializer-bundle": "^5.3",
         "lexik/jwt-authentication-bundle": "^2.19",
         "phpdocumentor/reflection-docblock": "^5.3",
